--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,11 +3,9 @@
 {% block title %}Home Page!{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
-    <ul>
-        {% for category in categories %}
-        <li>{{ category.name|trans }}</li>
-        {% endfor %}
-    </ul>
+<div class="row">
+    {% for annoucement in announcements %}
+    <div class="col-3">{{ annoucement.title }}</div>
+    {% endfor %}
 </div>
 {% endblock %}
