Modify templates Add file upload functionality Add login/registration

--- a/templates/index/sidebar.html.twig
+++ b/templates/index/sidebar.html.twig
@@ -1,3 +1,4 @@
+<a class="btn btn-block btn-primary mb-2" href="{{ path('add-announcement') }}">{{ 'Add'|trans }}</a>
 <ul class="list-group">
     {% for category in categories %}
         <li class="list-group-item"><a href="{{ path('get-by-category', {'category': category.id}) }}">{{ category.name|trans }}</a></li>
