--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -4,8 +4,26 @@
 
 {% block body %}
 <div class="row">
-    {% for annoucement in announcements %}
-    <div class="col-3">{{ annoucement.title }}</div>
+    {% for announcement in announcements %}
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    <text x="35%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                </svg>
+                <div class="card-body">
+                    <p class="card-text">{{ announcement.title }}</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="{{ path('view-announcement', {'id': announcement.id}) }}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                            <a href="{{ path('edit-announcement', {'id': announcement.id}) }}" type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                        </div>
+                        <small class="text-muted">9 mins</small>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% endfor %}
 </div>
 {% endblock %}
